--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-mock-firebase",
+  "name": "@xero88/ts-mock-firebase",
   "version": "2.3.0",
   "description": "Mock objects for Firebase",
   "main": "lib/index.js",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mindhivefi/ts-mock-firebase.git"
+    "url": "https://github.com/xero88/ts-mock-firebase.git"
   },
   "release": {
     "verifyConditions": "condition-circle",
