--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@xero88/ts-mock-firebase",
-  "version": "2.3.0",
+  "name": "ts-mock-firebase",
+  "version": "2.3.1",
   "description": "Mock objects for Firebase",
   "main": "lib/index.js",
   "scripts": {
