--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-mock-firebase",
-  "version": "2.3.1",
+  "version": "v2.4.0",
   "description": "Mock objects for Firebase",
   "main": "lib/index.js",
   "scripts": {
