--- a/package.json
+++ b/package.json
@@ -1,47 +1,20 @@
 {
-  "name": "ts-mock-firebase",
-  "version": "v2.4.0",
+  "name": "@trebaud/ts-mock-firebase",
+  "version": "v2.5.0",
   "description": "Mock objects for Firebase",
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf -f -r -d lib",
-    "prebuild": "yarn clean",
+    "prebuild": "npm run clean",
     "build": "./node_modules/.bin/tsc",
     "test": "jest --verbose --no-cache --maxWorkers=2",
     "test:watch": "jest --watch",
     "lint": "tslint --fix ./src/**/*.ts*  --project .",
-    "semantic-release": "semantic-release",
-    "predeploy": "yarn build",
-    "deploy": "yarn deploy",
-    "commit": "yarn git-cz",
-    "check-package": "tar tvf $(npm pack)",
-    "dir": "ls"
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/xero88/ts-mock-firebase.git"
-  },
-  "release": {
-    "verifyConditions": "condition-circle",
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      "@semantic-release/github"
-    ],
-    "prepare": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      {
-        "path": "@semantic-release/git",
-        "assets": [
-          "package.json",
-          "package-lock.json",
-          "CHANGELOG.md"
-        ],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }
-    ]
+    "url": "https://github.com/trebaud/ts-mock-firebase.git"
   },
   "keywords": [
     "firebase",
@@ -57,26 +30,12 @@
   ],
   "author": "Ville Venäläinen <ville@mindhive.fi> (https://www.mindhive.fi)",
   "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/mindhivefi/ts-mock-firebase/issues"
-  },
-  "homepage": "https://github.com/mindhivefi/ts-mock-firebase#readme",
   "devDependencies": {
-    "@commitlint/cli": "8.3.5",
-    "@commitlint/config-conventional": "8.3.4",
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/git": "9.0.0",
-    "@semantic-release/npm": "7.0.5",
     "@types/antlr4": "4.7.0",
     "@types/jest": "25.2.1",
     "@types/uuid": "7.0.3",
-    "commitizen": "4.1.0",
-    "condition-circle": "2.0.2",
-    "git-cz": "3.0.1",
-    "husky": "4.2.5",
     "jest": "25.5.4",
     "rimraf": "3.0.2",
-    "semantic-release": "17.0.7",
     "ts-jest": "25.4.0",
     "tslint": "6.1.2",
     "tslint-config-prettier": "1.18.0",
@@ -93,18 +52,6 @@
     "antlr4": "4.7.2",
     "firebase-rules-parser": "2.0.1",
     "uuid": "8.0.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "precommit": "yarn lint && yarn test && yarn clean",
-      "build": "yarn build"
-    }
   },
   "files": [
     "lib/**/*"
